--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>HTML Template</title>
+  <title>HTML template</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
@@ -10,7 +10,7 @@
   <!--- All the HTML goes in here -->
 
   <header>
-    <h1>HTML Template</h1>
+    <h1>HTML template</h1>
   </header>
 
   <main>
